UtahLiveDataTest/src/objects/GrantBudgetCategory__c.object
<CustomObject>
    <description>[Business] All the Budget Categories for a Grant are defined in this object</description>
    <fields>
        <fullName>Advance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount1__c</fullName>
        <label>Year 1 Amount (Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount2__c</fullName>
        <label>Year 2 Amount (Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount3__c</fullName>
        <label>Year 3 Amount (Obsolete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountCategory__c</fullName>
        <label>Amount Category (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountDue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Check Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Awarded Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BalanceInAdvance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BalanceInAdvance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategoryName__c</fullName>
        <formula>BudgetCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BudgetCategoryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>Grant_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodEndDate__c</fullName>
        <label>Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodStartDate__c</fullName>
        <label>Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>Grant_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetYear__c</fullName>
        <label>Budget Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BurnRate__c</fullName>
        <formula>IF(AwardedBudget__c != 0, TEXT(( ROUND(YeartoDateSpent__c / AwardedBudget__c,2))*100)+&apos;%&apos;, &apos;100%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Burn Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashMatch__c</fullName>
        <label>CashMatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClonedFromApplicationBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClonedFromApplicationBudgetCategory</label>
        <referenceTo>ApplicationBudgetCategory2__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>Grant_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedBudgetAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CurrentApprovedBudgetAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisallowedAmount__c</fullName>
        <label>Disallowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>Grant_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>Grant_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GranteeAmount__c</fullName>
        <label>Grantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantorAmount__c</fullName>
        <label>Grantor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InKind__c</fullName>
        <label>InKind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjService Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>GrantBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RowNumberText__c</fullName>
        <label>Row Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>GrantServiceArea__c</referenceTo>
        <relationshipLabel>Grant Budget Categories</relationshipLabel>
        <relationshipName>GrantBudgetCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceApplied__c</fullName>
        <label>YTD Advance Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceAvailable__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>YTD Advance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvancePaid__c</fullName>
        <label>YTD Advance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementAvailable__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>YTD Reimbursement Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <label>YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YeartoDateSpent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Year to Date Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Grant Budget Category</label>
    <nameField>
        <label>GrantBudgetCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>